--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">EmporiumPreAlpha3</string>
+    <string name="splash">Splash</string>
+    <string name="catalogue">Catalogue</string>
 </resources>
