--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">EmporiumPreAlpha3</string>
     <string name="splash">Splash</string>
     <string name="catalogue">Catalogue</string>
+    <string name="profile">Profile</string>
 </resources>
